# mandelbrot

./: .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake  external_glew.cmake  external_glfw.cmake  external_gmp.cmake  external_wxwidgets.cmake  osx_bundle.cmake
data/: frag_shader.glsl  mandelbrot_frag_shader.glsl  mandelbrot_vert_shader.glsl  simple_frag_shader.glsl  textured_frag_shader.glsl  textured_vert_shader.glsl  vert_shader.glsl
dependencies/: CMakeLists.txt
icons/: mandelbrot.icns
src/: application.cpp  application.hpp  canvas.cpp  canvas.hpp  colour_scheme_page.cpp  colour_scheme_page.hpp  colour_scheme_panel.cpp  colour_scheme_panel.hpp  config_in.hpp  defaults.hpp  exception.hpp  export_page.cpp  export_page.hpp  gl.hpp  info_page.cpp  info_page.hpp  locations_page.cpp  locations_page.hpp  main.cpp  main_window.cpp  main_window.hpp  mandelbrot.cpp  mandelbrot.hpp  params_page.cpp  params_page.hpp  render_utils.cpp  render_utils.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp  wx_helpers.cpp  wx_helpers.hpp
vendor_src/: CMakeLists.txt
